--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,6 @@
+<!doctype html>
+<html lang="en">
+
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -5,3 +8,9 @@
 	<title>Lasse Knodt</title>
 	%sveltekit.head%
 </head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
+</html>
